# pre-commit-coding-standards

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  README.md  project.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json  entrypoint.sh  pip-requirements.txt
hooks/: coding_standards.py  config.py
hooks/templates/: devcontainer_entrypoint_template  devcontainer_json_template  pre_commit_config_template
pre_commit_coding_standards.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: devcontainer_entrypoint_template  devcontainer_json_template
